[package]
name = "skybox"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-files = "0.6.5"
actix-web = "4.5.1"
sea-orm = {version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]}
tokio = {version = "1.37.0", features = ["fs"]}
rand = "0.8.5"
serde = {version = "1.0.198", features = ["derive"]}
env_logger = "0.11.3"
log = "0.4.21"
dotenv = "0.15.0"
